# r1-grasping

./: CMakeLists.txt  README.md
app/conf/: iol_manager.ini
app/scripts/: r1-grasping.xml  r1-grasping.xml.template  r1-grasping_action-gateway.xml  r1-grasping_action-gateway_simulation.xml  r1-grasping_grasp-detector.xml
modules/: CMakeLists.txt
modules/action-gateway/: CMakeLists.txt
modules/action-gateway/app/conf/: config-sim.ini  config.ini
modules/action-gateway/src/: main.cpp
modules/behavior-tree/: BTFetch.xml  README.md
modules/behavior-tree/carve/: CMakeLists.txt
modules/behavior-tree/carve/include/: carve_nodes.h
modules/behavior-tree/carve/src/: carve_fetch.cpp  carve_nodes.cpp  environment_dummy.cpp
modules/grasp-approach/: CMakeLists.txt  README.md
modules/grasp-approach/app/conf/: config_640x480.ini  iol_manager.ini  locations.ini
modules/grasp-approach/app/scripts/: demo-mobile-manipulation.xml  demo-mobile-manipulation_IOL.xml  demo-mobile-manipulation_detection_AFAR_640x480.xml
modules/grasp-approach/src/: idl.thrift  main.cpp
modules/grasp-detector/: CMakeLists.txt
modules/grasp-detector/app/conf/: config.ini
modules/grasp-detector/app/scripts/: R1_hand_skin_grasp_detector.xml  app_skin.xml  skinManLeft.ini  skinManRight.ini
modules/grasp-detector/src/: idl.thrift  main.cpp
modules/grasping-module/: CMakeLists.txt
modules/grasping-module/idl/: src_idl_thrift.cmake
modules/grasping-module/idl/include/src/: GraspingModule_IDL.h
modules/grasping-module/idl/src/: GraspingModule_IDL.cpp
modules/grasping-module/src/: idl.thrift  main.cpp
modules/vision3d-gateway/: CMakeLists.txt
modules/vision3d-gateway/app/conf/: config.ini
modules/vision3d-gateway/src/: main.cpp
